# one_vs_all_PPI

./: .gitignore  README.md  environment.yml
configs/: config.yaml
docs/: config.md  developer_guid.md  inputs_ouputs.md  installation.md  proteom_filtering.md  workflow.md
docs/HPC/: alphafold3_hpc.md
pooled_ppi/: LICENSE  README.md  pyproject.toml
pooled_ppi/examples-colab/iptm_size_correction/: iptm_size_correction.ipynb
pooled_ppi/examples-colab/sample-pools-mgen/: debug-init-pools.ipynb  sample-pools-mgen-colab.ipynb  sequences.ipynb  sequences.tsv
pooled_ppi/examples-dev/g_convert/: query.ipynb
pooled_ppi/examples-dev/get_pdb/: get_chains.ipynb  get_pair.ipynb
pooled_ppi/examples-dev/pooled_predictions/: pooled_predictions.ipynb
pooled_ppi/examples-dev/sample-pools-human/: sample-pools-human.ipynb
pooled_ppi/examples-dev/string_db/: string_db.ipynb
pooled_ppi/src/pooled_ppi/: __init__.py  biogrid.py  core.py  fasta.py  g_convert.py  ipsae.py  predictions.py  predictions_db.py  sample_pools.py  size_correction.py  string_db.py
results/bait_screen/: rfa1_v0_pool_summary.tsv  rfa1_v0_pools.tsv
src/: bait_analysis.py  extract_af3_pair_scores.py  generate_pool.py  run_pooled_ppi_sampler.py  test.py  validate_af3_jsons.py  workflow.py  write_af3_jsons.py
src/seq_filtering/: filter_proteins.py
